correct text alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@ p {
   font-family: var(--secondary-font-family);
   font-size: 16px;
   line-height: 2;
+  text-align: center;
 }
 img {
   border-radius: 4px;
@@ -34,6 +35,7 @@ img {
 
 .intro p {
   font-size: 36px;
+  text-align: center;
 }
 .intro h2 {
   font-family: var(--secondary-font-family);
